GNOME Bugzilla – Bug 684351
rpc-layer: Fix memory leak in call state pool
Last modified: 2012-09-25 14:00:41 UTC
The pool of CallState objects in the gnome-keyring-pkcs11.so module was causing what looked like a memory leak to valgrind.
Created attachment 224704 [details] [review] rpc-layer: Fix memory leak in call state pool
See https://bugs.freedesktop.org/show_bug.cgi?id=46722 for more details.
Hello Stef. Thanks for proposing a solution to the problem. Perhaps, it might have a security impact that needs to be classified in CVE database for example ? I am sorry, but unfortunately my test system is temporarily knocked down due to problems with other components that were getting radically changed, so I am not able to test your proposed changes at the moment. If and when I will be able to test, I will let you know.
I don't think this is a security vulnerability. The leak is not cumulative. And the pooled connection just connects back to the same user session daemon.
Attachment 224704 [details] pushed as 0c71452 - rpc-layer: Fix memory leak in call state pool