rpc-layer: Fix memory leak in call state pool

https://bugzilla.gnome.org/show_bug.cgi?id=684351